Set my subreddits menu cursor to pointer cursor.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -3546,6 +3546,7 @@ ul#image-preview-list .description pre {
     font-weight: normal;
     margin-left: -5px; /* There's 5px margin intended for the SR list... */
     margin-right: 10px;/* ...so we move it to the right side plus 5 more */
+    cursor: pointer;
  }
 
 .srdrop .choice {padding-top: 3px;}
