/dev/api: Add an overview section and explain fullnames.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5975,6 +5975,18 @@ body:not(.gold) .allminus-link {
     top: 58px;
 }
 
+.api-help .contents .overview {
+    p {
+        margin: .8em 0;
+    }
+
+    code {
+        background-color: #f0f0f0;
+        padding: 0 .5em;
+        border-radius: 3px;
+    }
+}
+
 .api-help .toc ul {
     position: relative;
     margin-top: .5em;
@@ -6080,6 +6092,7 @@ body:not(.gold) .allminus-link {
     border-radius: 2px;
 }
 
+.api-help .overview h2,
 .api-help .methods h2 {
     color: black;
     font-size: 1.45em;
@@ -6142,6 +6155,11 @@ body:not(.gold) .allminus-link {
     padding: 5px 10px;
     border-spacing: 0;
     width: 100%;
+}
+
+.api-help caption {
+    font-weight: bold;
+    margin: 1em 0 .5em .5em;
 }
 
 .api-help .parameters th,
