/dev/api: Add an explanation of modhashes to the overview.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5976,6 +5976,10 @@ body:not(.gold) .allminus-link {
 }
 
 .api-help .contents .overview {
+    h3 {
+        margin-top: 1.5em;
+    }
+
     p {
         margin: .8em 0;
     }
