--- a/r2/r2/templates/apihelp.html
+++ b/r2/r2/templates/apihelp.html
@@ -132,6 +132,14 @@
   <div class="section overview">
     <h2>overview</h2>
 
+    <h3 id="modhashes">modhashes</h3>
+
+    <p>A modhash is a token that the reddit API requires to help prevent&#32;<a
+      href="http://en.wikipedia.org/wiki/CSRF">CSRF</a>. Modhashes can be
+    obtained via the&#32;<a href="#GET_api_me.json">/api/me.json</a>&#32;call
+    or in the&#32;<code>Listing</code>&#32;structures of several other API
+    calls.</p>
+
     <h3 id="fullnames">fullnames</h3>
 
     <p>A fullname is a combination of a thing's type
