Gold Feature: "The Butler". Username monitoring in comments.
This is a new feature available only to Gold members. It defaults to on,
but may be turned off in preferences. When a username is mentioned on
the site in the /u/username format, and some conditions apply, the user
is notified by an orangered and a new type of item in the inbox. There
are several cases where notifications won't occur to reduce noise, see
butler.py for details.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -142,7 +142,9 @@ label.disabled { color: gray; }
 
 .flat-list {list-style-type: none; display: inline;}
 .flat-list li, .flat-list form {display: inline; white-space: nowrap; }
-.flat-list .selected a { color: orangered; }
+
+.flat-list li a.gold { color: #9a7d2e; font-weight: bold; }
+.flat-list li.selected a { color: orangered; }
 
 .link .flat-list { display: block; padding: 1px 0; }
 .link.compressed .flat-list { display: inline-block; padding: 0 0 1px 0; }
