--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -316,6 +316,7 @@
           (${_("we'll remember your visits for 48 hours and show you which comments you haven't seen yet")})
         </span>
         <br/>
+        ${checkbox(_("notify me when people say my username"), "monitor_mentions")}
     </td>
   </tr>
   %endif
