Switch to flexible page name positioning for wide logos.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6985,8 +6985,8 @@ body.with-listing-chooser {
 
     & #header .pagename {
         position: absolute;
-        left: 130px;
         bottom: 20px;
+        margin-left: 2px;
     }
 
     & > .content, & .footer-parent {
