Add intro widget to listing chooser with sample multireddits.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7022,6 +7022,24 @@ body.with-listing-chooser {
         padding: 4px;
     }
 
+    .intro {
+        background: lighten(#f6e69f, 5%);
+        border: 1px solid lighten(orange, 5%);
+        border-left: none;
+        border-right: none;
+        margin-bottom: 10px;
+
+        p {
+            font-size: 1.15em;
+            margin: 4px;
+            margin-left: 8px;
+        }
+
+        ul.multis {
+            margin: 6px 0;
+        }
+    }
+
     ul.global, ul.other {
         padding: 8px 0;
         li {
