--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -1046,7 +1046,7 @@ a.author { margin-right: 0.5em; }
     @arrow-offset: 40px;
     margin-top: -7px - @arrow-offset;
     min-width: 130px;
-    min-height: @arrow-offset * 2;
+    min-height: @arrow-offset;
     padding: 8px 0;
     .no-select;
 
