wiki: Add a view source button.

--- a/r2/r2/public/static/css/wiki.less
+++ b/r2/r2/public/static/css/wiki.less
@@ -204,4 +204,11 @@
             background-color: #5F99CF;
         }
     }
+    .source {
+        width: 100%;
+        display: none;
+    }
+    .toggle-source {
+        float: right;
+    }
 }
