sidebar-message: Tweak <p> spacing.
This fixes the small amount of extra space at the bottom of a sidebar
message that contains only a single <p><strong>...</strong></p>.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -425,8 +425,11 @@ ul.flat-vert {text-align: left;}
             display: block;
             font-weight: normal;
             font-size: 1.25em;
-            margin-bottom: .25em;
         }
+    }
+
+    p + p {
+        margin-top: .25em;
     }
 }
 
