Consolidate multi creation forms and don't clobber existing multis.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5163,7 +5163,7 @@ table.calendar {
         display: none;
         margin-bottom: 10px;
 
-        .copy-name {
+        .multi-name {
             border: 1px solid #ccc;
             padding: 3px;
         }
