--- a/r2/r2/templates/listingchooser.html
+++ b/r2/r2/templates/listingchooser.html
@@ -56,7 +56,7 @@
     ${section_items(thing.sections['multi'])}
     <li class="create">
       <form>
-        <input type="text" placeholder="${_('name')}"></input>
+        <input type="text" class="multi-name" placeholder="${_('name')}"></input>
         <div class="error"></div>
         <button>${_('create')}</button><div class="throbber"></div>
       </form>
