--- a/r2/r2/templates/multiinfobar.html
+++ b/r2/r2/templates/multiinfobar.html
@@ -52,7 +52,7 @@
 
   %if thing.can_copy:
     <form class="copy-multi">
-      <input type="text" class="copy-name" placeholder="${_('copy name')}"><button class="copy">${_('copy')} &rsaquo;</button>
+      <input type="text" class="multi-name" placeholder="${_('copy name')}"><button class="copy">${_('copy')} &rsaquo;</button>
       <div class="error copy-error"></div>
     </form>
   %endif
