Add sendreplies checkbox to self-serve promotion form.
Defaults to checked.

--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -226,6 +226,8 @@ ${self.javascript_setup()}
     <div class="delete-field">
       ${checkbox("disable_comments", _("disable comments"), link.disable_comments)}
       <br />
+      ${checkbox("sendreplies", _("send comments on my ad to my inbox"), link.sendreplies)}
+      <br />
     </div>
 
     <div class="help infotext rounded">
