Remove gold-gate from sendreplies feature.

--- a/r2/r2/templates/newlink.html
+++ b/r2/r2/templates/newlink.html
@@ -116,17 +116,14 @@ ${thing.formtabs_menu}
     </div>
 </div>
 
-%if c.user.gold:
-  <div class="spacer">
-    <%utils:round_field title="${_('options')}" css_class="gold-accent">
-      <input class="nomargin" type="checkbox" checked="checked" name="sendreplies" id="sendreplies" data-send-checked="true"/>
-      <label for="sendreplies">
-        ${_("send replies to my inbox")}
-      </label>
-      &#32;<span class="little gray">(${_("beta")})</span>
-    </%utils:round_field>
-  </div>
-%endif
+<div class="spacer">
+  <%utils:round_field title="${_('options')}">
+    <input class="nomargin" type="checkbox" checked="checked" name="sendreplies" id="sendreplies" data-send-checked="true"/>
+    <label for="sendreplies">
+      ${_("send replies to my inbox")}
+    </label>
+  </%utils:round_field>
+</div>
 
 ${thing.captcha}
     
