wiki: Add formatting help to edit page.

--- a/r2/r2/public/static/css/wiki.less
+++ b/r2/r2/public/static/css/wiki.less
@@ -168,6 +168,13 @@
             }
         }
 
+        .markhelp {
+            max-width: 500px;
+            font-size: 1.2em;
+            padding: 4px;
+            margin: 5px 0;
+        }
+
     }
 
     // Page title 
