wiki: Add throbber on edit.

--- a/r2/r2/public/static/css/wiki.less
+++ b/r2/r2/public/static/css/wiki.less
@@ -152,7 +152,11 @@
         .wiki_button {
             padding: 2px;
         }
-        
+
+        .throbber {
+            margin-bottom: -5px;
+        }
+
         // Submit Discussion button 
         .discussionlink {
             display: inline-block;
