--- a/r2/r2/templates/wikieditpage.html
+++ b/r2/r2/templates/wikieditpage.html
@@ -45,4 +45,5 @@
     <input type="text" name="reason" maxlength="256" id="wiki_revision_reason" />
     <input type="hidden" id="previous" name="previous" value="${thing.previous}" />
     <br/><br/><input type="submit" id="wiki_save_button" class="wiki_button" value="${_('save page')}" />
+    <span class="throbber" />
 </form>
