banning: Correct css on ban note.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5459,7 +5459,7 @@ body:not(.gold) .allminus-link {
     font-weight: bold;
 }
 
-.friend-note button[type=submit] { 
+.rel-note button[type=submit] { 
     display: none; 
     font-size: x-small;
     padding-top: 1px;
@@ -5468,8 +5468,8 @@ body:not(.gold) .allminus-link {
     margin-left: 5px;
     width: 45px;
 }
-.friend-note.edited button[type=submit] { display: inline-block; }
-.friend-note.edited input[type=text] { width: 250px; margin-right: 0px; }
+.rel-note.edited button[type=submit] { display: inline-block; }
+.rel-note.edited input[type=text] { width: 250px; margin-right: 0px; }
 
 
 .gold-accent h1,
