banning: Add the ability to set a note at ban time.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5471,6 +5471,11 @@ body:not(.gold) .allminus-link {
 .rel-note.edited button[type=submit] { display: inline-block; }
 .rel-note.edited input[type=text] { width: 250px; margin-right: 0px; }
 
+.friend-add.edited .ban-reason { display: block; }
+
+.ban-reason {
+    display: none;
+}
 
 .gold-accent h1,
 .gold-accent th {
