--- a/r2/r2/templates/printable.html
+++ b/r2/r2/templates/printable.html
@@ -87,6 +87,14 @@ ${self.RenderPrintable()}
     % if hasattr(what, 'campaign'):
       data-cid="${what.campaign}"
     % endif
+
+    % if hasattr(what, 'adserver_imp_pixel'):
+      data-adserver-imp-pixel="${what.adserver_imp_pixel}"
+    % endif
+
+    % if hasattr(what, 'adserver_click_url'):
+      data-adserver-click-url="${what.adserver_click_url}"
+    % endif
 </%def>
 
 <%def name="RenderPrintable()">
