--- a/r2/r2/templates/listingchooser.html
+++ b/r2/r2/templates/listingchooser.html
@@ -37,7 +37,9 @@
   %endfor
 </%def>
 
+<script>r.ui.collapseListingChooser()</script>
 <div class="listing-chooser">
+  <div class="grippy"></div>
   <ul class="global">
     ${section_items(thing.sections['global'])}
   </ul>
