Work around silly LESS transparent color issue until ours is upgraded.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7216,7 +7216,7 @@ body.with-listing-chooser.listing-chooser-collapsed {
                 margin-top: -@size;
                 display: block;
                 content: '';
-                border: @size solid transparent;
+                border: @size solid ~"transparent";
                 border-style: solid solid outset; // mitigates firefox drawing a thicker arrow
                 border-left-color: lighten(#369, 25%);
             }
