Widen and darken listing choooser grippy.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7008,7 +7008,7 @@ body.gold .buttons li.comment-save-button { display: inline; }
     padding: 2px 5px;
 }
 
-@listing-chooser-grippy-width: 4px;
+@listing-chooser-grippy-width: 6px;
 body.with-listing-chooser {
     position: relative;
 
@@ -7047,6 +7047,7 @@ body.with-listing-chooser.listing-chooser-collapsed {
     .listing-chooser {
         width: 0;
         padding-right: @listing-chooser-grippy-width;
+        border-right: 1px solid #ccc;
         .grippy {
             z-index: 40;
             width: @listing-chooser-grippy-width;
