Animate left sidebar collapse/expand.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -7070,6 +7070,7 @@ body.with-listing-chooser.listing-chooser-collapsed {
     padding-right: @listing-chooser-grippy-width;
     background: #f7f7f7;
     overflow: hidden;
+    .transition(width, .25s);
 
     &:after {
         content: '';
@@ -7188,6 +7189,7 @@ body.with-listing-chooser.listing-chooser-collapsed {
                 color: gray;
                 font-size: .8em;
                 font-weight: normal;
+                white-space: nowrap;
             }
         }
 
